# exe

./: README.md  README_APP.md  README_WINDOWS.md  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: build-windows.yml
.github/workflows/.github/workflows/: build-windows.yml
app/: cli.py  gm_agent.py  llm_backends.py  prompts.py  rules_summaries.md  server.py  state.py  tools.py  ui.py  utils.py
data/: state.json
packaging/: bitd_gm_ai.spec  bitd_gm_ai_win.spec  build_linux.sh  build_macos.command  build_windows.bat  create_shortcut.ps1  installer.iss
tools/: export_cards.py
training/: prepare_dataset.py  sft_train.py
